# CBot

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cbot-completion.bash  install.sh
include/commands/: build.hpp  cmake.hpp  commit.hpp  doc.hpp  format.hpp  init.hpp  selfmgmt.hpp
include/utils/: cpp_parser.hpp  llm_client.hpp  process.hpp
src/: main.cpp
src/commands/: build.cpp  cmake.cpp  commit.cpp  doc.cpp  format.cpp  init.cpp  selfmgmt.cpp
src/utils/: cpp_parser.cpp  llm_client.cpp  process.cpp
